--- a/index.html
+++ b/index.html
@@ -123,6 +123,32 @@
             <p>Projetos realizados.</p>
             <div class="card-container">
                 <div class="card">
+                    <img src="./assets/img/projeto-cafeteria.png" alt="Projeto Cafeteria">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>Cafeteria Manhattan</h3>
+                        <p>Projeto com algumas melhorias focadas em SEO, 
+                            acessibilidade e responsividade, 
+                            você pode aprimorar ainda mais a experiência 
+                            do usuário e a visibilidade.
+                        </p>
+                        <a href="https://github.com/AndressaTurchetto/cafeteria-manhattan" class="btn" target="_blank">Repositório</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/projeto-cafeteria-bootstrap.png" alt="Projeto Cafeteria">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>Cafeteria Serenatto</h3>
+                        <p>Um site responsivo e moderno para a 
+                            Cafeteria & Bistrô Serenatto, 
+                            que oferece uma experiência agradável 
+                            utilizando Bootstrap
+                        </p>
+                        <a href="https://github.com/AndressaTurchetto/coffe-shop-with-bootstrap/tree/master" class="btn" target="_blank">Repositório</a>
+                    </div>
+                </div>
+                <div class="card">
                     <img src="./assets/img/jornada-milhas.png" alt="Projeto Jornada Milhas">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
@@ -138,7 +164,6 @@
                         <h3>Formulário Reactive Form - Tamplete-Driven</h3>
                         <p>Projeto possui dois formulários de validação Angular, um com Reactive Form e outro com Tamplete Driven e estilização com Tailwind.</p>
                         <a href="https://github.com/AndressaTurchetto/formulario-angular" class="btn" target="_blank">Repositório</a>
-                        <a href="https://formulario-angular-henqf25os-andressaturchettos-projects.vercel.app" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
@@ -157,7 +182,6 @@
                         <h3>Agência de Viagens</h3>
                         <p>Projeto com páginas dinâmicas com formulário HTML que enviam dados do front-end para o back-end.</p>
                         <a href="https://github.com/AndressaTurchetto/projeto-dev-2/tree/main/projeto-agencia-de-viagens" class="btn" target="_blank">Repositório</a>
-                        <a href="https://andressaturchetto.github.io/projeto-dev-2/projeto-agencia-de-viagens/index.html" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
@@ -167,7 +191,6 @@
                         <h3>Clínica CM Life</h3>
                         <p>Uma página web responsiva utilizando as tecnologias HTML e CSS com tags semânticas, tabelas, Flexbox e media queries.</p>
                         <a href="https://github.com/AndressaTurchetto/projeto-dev-2/tree/main/projeto-clinica" class="btn" target="_blank">Repositório</a>
-                        <a href="https://andressaturchetto.github.io/projeto-dev-2/projeto-clinica/index.html" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
@@ -177,17 +200,6 @@
                         <h3>Pet Boutique</h3>
                         <p>Usei as imagens para preencher o fundo dos elementos e sombra para destacar elementos. Utilizei um recurso conversa com um clique do WhatsApp e um mapa interativo do Google Maps apresentando a localização da loja.</p>
                         <a href="https://github.com/AndressaTurchetto/pet-boutique" class="btn" target="_blank">Repositório</a>
-                        <a href="https://pet-boutique-8pfvyufvn-andressaturchettos-projects.vercel.app" class="btn" target="_blank">Deploy</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/projeto-cafeteria.png" alt="Projeto Cafeteria">
-                    <div class="card-content">
-                        <h4>Desenvolvimento Front-End</h4>
-                        <h3>Cafeteria Manhattan</h3>
-                        <p>Projeto feito apenas com HTML e CSS para estudo com um layout refinado. Foi implementado lista informativa, efeito "flutuante" no link do rodapé, mapa de localização e um estilo com efeito parallax.</p>
-                        <a href="https://github.com/AndressaTurchetto/cafeteria-manhattan" class="btn" target="_blank">Repositório</a>
-                        <a href="https://cafeteria-manhattan-iauu06y4y-andressaturchettos-projects.vercel.app" class="btn" target="_blank">Deploy</a>
                     </div>
                 </div>
                 <div class="card">
@@ -196,7 +208,7 @@
                         <h4>Desenvolvimento Front-End</h4>
                         <h3>Projeto Pesquisa Google Books</h3>
                         <p>Projeto feito com o Framework Angular e a biblioteca RxJs para consumo da API do Google Books.</p>
-                        <a href="https://github.com/AndressaTurchetto/api-google-books" class="btn" target="_blank">Repositório</a>
+                        <a href="https://github.com/AndressaTurchetto/api-google-books/tree/master" class="btn" target="_blank">Repositório</a>
                     </div>
                 </div>
                 <div class="card">
@@ -206,7 +218,7 @@
                         <h3>Lista de Compras</h3>
                         <p>Projeto de lista de compras funcional trabalhando com dados reais e explorando os estudos sobre todo o ciclo de vida Angular.</p>
                         <a href="https://github.com/AndressaTurchetto/lista-de-compras/tree/master" class="btn" target="_blank">Repositório</a>
-                        <a href="https://github.com/AndressaTurchetto/lista-de-compras/tree/master" class="btn" target="_blank">Deploy</a>
+                        <!-- <a href="https://github.com/AndressaTurchetto/lista-de-compras/tree/master" class="btn" target="_blank">Deploy</a> -->
                     </div>
                 </div>
             </div>
