--- a/index.html
+++ b/index.html
@@ -123,19 +123,6 @@
             <p>Projetos realizados.</p>
             <div class="card-container">
                 <div class="card">
-                    <img src="./assets/img/projeto-cafeteria.png" alt="Projeto Cafeteria">
-                    <div class="card-content">
-                        <h4>Desenvolvimento Front-End</h4>
-                        <h3>Cafeteria Manhattan</h3>
-                        <p>Projeto com algumas melhorias focadas em SEO, 
-                            acessibilidade e responsividade, 
-                            você pode aprimorar ainda mais a experiência 
-                            do usuário e a visibilidade.
-                        </p>
-                        <a href="https://github.com/AndressaTurchetto/cafeteria-manhattan" class="btn" target="_blank">Repositório</a>
-                    </div>
-                </div>
-                <div class="card">
                     <img src="./assets/img/projeto-cafeteria-bootstrap.png" alt="Projeto Cafeteria">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
@@ -146,6 +133,31 @@
                             utilizando Bootstrap
                         </p>
                         <a href="https://github.com/AndressaTurchetto/coffe-shop-with-bootstrap/tree/master" class="btn" target="_blank">Repositório</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/projeto-api-weather.png" alt="Projeto Clima Tempo">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>Projeto Weather API</h3>
+                        <p>Este projeto consome a API de clima para fornecer 
+                            informações atualizadas sobre as condições meteorológicas 
+                            em diferentes locais.
+                        </p>
+                        <a href="https://github.com/AndressaTurchetto/coffe-shop-with-bootstrap/tree/master" class="btn" target="_blank">Repositório</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/projeto-cafeteria.png" alt="Projeto Cafeteria">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>Cafeteria Manhattan</h3>
+                        <p>Projeto com algumas melhorias focadas em SEO, 
+                            acessibilidade e responsividade, 
+                            você pode aprimorar ainda mais a experiência 
+                            do usuário e a visibilidade.
+                        </p>
+                        <a href="https://github.com/AndressaTurchetto/cafeteria-manhattan" class="btn" target="_blank">Repositório</a>
                     </div>
                 </div>
                 <div class="card">
