--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <p>Projetos realizados.</p>
             <div class="card-container">
                 <div class="card">
-                    <img src="./assets/img/projeto-cafeteria-bootstrap.png" alt="Projeto Cafeteria">
+                    <img src="./assets/img/projeto-cafeteria-boots.png" alt="Projeto Cafeteria">
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
                         <h3>Cafeteria Serenatto</h3>
@@ -152,6 +152,19 @@
                     <div class="card-content">
                         <h4>Desenvolvimento Front-End</h4>
                         <h3>Cafeteria Manhattan</h3>
+                        <p>Projeto com algumas melhorias focadas em SEO, 
+                            acessibilidade e responsividade, 
+                            você pode aprimorar ainda mais a experiência 
+                            do usuário e a visibilidade.
+                        </p>
+                        <a href="https://github.com/AndressaTurchetto/cafeteria-manhattan" class="btn" target="_blank">Repositório</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/projeto-ecommerce.png" alt="Projeto e-commerce">
+                    <div class="card-content">
+                        <h4>Desenvolvimento Front-End</h4>
+                        <h3>E-commerce</h3>
                         <p>Projeto com algumas melhorias focadas em SEO, 
                             acessibilidade e responsividade, 
                             você pode aprimorar ainda mais a experiência 
